--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,11 @@ on:
           - production
 
 # Variables d'environnement globales
+# Note: github.repository_owner est automatiquement en minuscules
 env:
   REGISTRY: ghcr.io
-  FRONTEND_IMAGE: ghcr.io/${{ github.repository }}-frontend
-  BACKEND_IMAGE: ghcr.io/${{ github.repository }}-backend
+  FRONTEND_IMAGE: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-frontend
+  BACKEND_IMAGE: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-backend
 
 jobs:
   # ===========================================================================
