--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ on:
           - production
 
 # Variables d'environnement globales
-# Note: github.repository_owner est automatiquement en minuscules
+# Note: Les noms d'images Docker doivent être en minuscules
 env:
   REGISTRY: ghcr.io
-  FRONTEND_IMAGE: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-frontend
-  BACKEND_IMAGE: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}-backend
+  FRONTEND_IMAGE: ghcr.io/elie-dev25/mediconnet-app-frontend
+  BACKEND_IMAGE: ghcr.io/elie-dev25/mediconnet-app-backend
 
 jobs:
   # ===========================================================================
