--- a/Mediconnet-Backend/Mediconnet-Backend.csproj
+++ b/Mediconnet-Backend/Mediconnet-Backend.csproj
@@ -58,8 +58,12 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
 
     <!-- Email -->
-    <PackageReference Include="MailKit" Version="4.3.0" />
-    <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="MailKit" Version="4.8.0" />
+    <PackageReference Include="MimeKit" Version="4.8.0" />
+
+    <!-- Security - Rate Limiting & Data Protection -->
+    <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
